Removed JDK1.5-specific construct.
git-svn-id: https://svn.apache.org/repos/asf/openjpa/trunk@546742 13f79535-47bb-0310-9956-ffa450edef68